--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,15 @@
               <select id="logs-backend-select" class="filter-select">
                 <option value="all">All Backends</option>
               </select>
+              <select id="logs-model-select" class="filter-select">
+                <option value="all">All Models</option>
+              </select>
+              <select id="logs-dlp-select" class="filter-select">
+                <option value="all">All DLP Status</option>
+                <option value="passed">Passed</option>
+                <option value="redacted">Redacted</option>
+                <option value="blocked">Blocked</option>
+              </select>
               <select id="logs-time-select" class="filter-select">
                 <option value="1h">1 Hour</option>
                 <option value="6h">6 Hours</option>
