--- a/src/index.html
+++ b/src/index.html
@@ -109,9 +109,14 @@
                 <option value="7d">7 Days</option>
               </select>
             </div>
-            <button id="logs-refresh-btn" class="icon-btn" title="Refresh">
-              <i data-lucide="refresh-cw"></i>
-            </button>
+            <div class="header-actions">
+              <button id="logs-export-btn" class="icon-btn" title="Export to JSONL">
+                <i data-lucide="download"></i>
+              </button>
+              <button id="logs-refresh-btn" class="icon-btn" title="Refresh">
+                <i data-lucide="refresh-cw"></i>
+              </button>
+            </div>
           </div>
           <div class="logs-toolbar">
             <div class="search-box">
