--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <!-- Sidebar -->
       <nav class="sidebar">
         <div class="sidebar-header">
-          <h2>Agent Gateway <span class="header-branding"><span class="made-by">by</span> <a href="https://quilr.ai" target="_blank">Quilr</a></span></h2>
+          <h2>Agent Gateway <span class="header-branding"><span class="made-by">by</span> <a href="https://quilr.ai" target="_blank">QuilrAI</a></span></h2>
         </div>
         <ul class="nav-tabs">
           <li class="nav-item active" data-tab="home">
