--- a/index.html
+++ b/index.html
@@ -190,5 +190,6 @@
       });
     });
   </script>
+  <script async data-id="101499735" src="//static.getclicky.com/js"></script>
 </body>
 </html>
