--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="pages.css" />
     <link rel="stylesheet" href="dark-mode.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Agent Gateway</title>
+    <title>LLMwatcher</title>
     <script src="lib/chart.min.js"></script>
     <script src="lib/lucide.min.js"></script>
     <script type="module" src="/main.js" defer></script>
@@ -18,7 +18,7 @@
       <!-- Sidebar -->
       <nav class="sidebar">
         <div class="sidebar-header">
-          <h2>Agent Gateway <span class="header-branding"><span class="made-by">by</span> <a href="https://quilr.ai" target="_blank">QuilrAI</a></span></h2>
+          <h2>LLMwatcher <span class="header-branding"><span class="made-by">by</span> <a href="https://quilr.ai" target="_blank">QuilrAI</a></span></h2>
         </div>
         <ul class="nav-tabs">
           <li class="nav-item active" data-tab="home">
