--- a/src/tray.html
+++ b/src/tray.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agent Gateway</title>
+  <title>LLMwatcher</title>
   <script src="lib/chart.min.js"></script>
   <style>
     * {
@@ -413,11 +413,11 @@
     });
 
     document.getElementById('starGithub').addEventListener('click', async () => {
-      await openUrl('https://github.com/quilrai/local-agent-gateway');
+      await openUrl('https://github.com/quilrai/LLMWatcher');
     });
 
     document.getElementById('reportIssue').addEventListener('click', async () => {
-      await openUrl('https://github.com/quilrai/local-agent-gateway/issues');
+      await openUrl('https://github.com/quilrai/LLMWatcher/issues');
     });
 
     // Close popup when clicking outside (losing focus)
